
  [ Alexander Sack ]
  * use system nspr and system nss; add build-depends accordingly
    - update debian/control
    - update debian/rules
  * add versioned depends on xulrunner-1.9 >= 1.9~b2+nobinonly which is the
    first xulrunner-1.9 that officially uses system nspr/nss.
  * tighten dependency on xulrunner-1.9 << 1.9~b3~
    - update debian/control

 -- Fabien Tassin <fta@sofaraway.org>  Wed, 19 Dec 2007 20:23:23 +0100

firefox-3.0 (3.0~b1+nobinonly-0ubuntu1) hardy; urgency=low

  * new upstream snapshot (3.0b1 from FIREFOX_3_0b1_RELEASE)
    - update debian/changelog
  * Rename desktop file firefox-3.0-final.desktop so it doesn't
    get cleaned out
    - update debian/rules
    - rename debian/firefox-3.0.desktop to firefox-3.0-final.desktop
  * Install extensions in /usr/lib/xulrunner-addons/extensions
    - update debian/firefox-3.0.install
    - update debian/rules
  * Use official branding for beta too as homepage/releasenotes URLs
    are maintained that way. Disable crash reporter.
    - update debian/patches/firefox-profilename
    - update debian/rules
    - update debian/firefox-3.0-final.desktop
  * Fix URLs for addons/themes/plugins
    - update debian/patches/firefox-profilename
  * Revert hardcoded lib path to the upstream path, move searchplugins to
    /usr/lib/firefox-addons/searchplugins and plugins to
    /usr/lib/firefox-addons/plugins.
    - update debian/patches/firefox-fsh
    - update debian/rules
    - divert debian/firefox-3.0.postinst => debian/firefox-3.0.postinst.in
    - divert debian/firefox.sh => debian/firefox.sh.in
    - add debian/firefox-3.0.dirs
    - drop debian/firefox-3.0.links
    - update debian/firefox-3.0{,-gnome-support}.install
  * Drop --with-default-mozilla-five-home, prefer default value
    - update debian/rules

 -- Fabien Tassin <fta@sofaraway.org>  Tue, 27 Nov 2007 02:27:42 +0100

firefox-3.0 (3.0~b1~rc3+nobinonly-0ubuntu1) hardy; urgency=low

  RELEASE: 3.0~b1~rc3+nobinonly-0ubuntu1 to ubuntu/hardy
